  - fixed #860, OSX: Frescobaldi overrides critical cursor navigation keyboard shortcuts;
    new shortcuts:
    - next document: ctrl+tab
    - previous document: ctrl+shift+tab
    - start of line: cmd+left
    - end of line: cmd+right
  - fixed #1087, File names in document tabs are not shown correctly on Mac
  - fixed #1272, Global menu with no windows on Mac is not working


Changes in 3.1.1 -- January 4th, 2020

* Bug fixes:
  - fixed #1242, AttributeError: 'PopplerDocument' has no attribute 'ispresent'
  - fixed #1234, NameError: 'QPinchGesture' is not defined (pinch in music view)
  - fixed #1231, NameError: 'doc' is not defined (when printing on Mac OSX)


Changes in 3.1 -- December 27th, 2019

* Requirement changes:
  - Frescobaldi now requires Python3.3+
* New features:
  - New "Document Fonts" dialog supporting text and music fonts
    and providing a font sample previewer
  - Possibility to load external extensions
  - New "First System Only" option in Custom Engrave
  - Goto Line command (#927, feature request #676)
  - Rename file command (#1057, feature request #980)
  - Music view:
    - Copy to Image can copy/export to SVG, PDF and EPS in addtion to PNG/JPG
    - New toolbar button to show/hide the magnifier
    - New preference Horizontal / Vertical
    - New preference Continuous / non-continuous (displays only current page(s))
    - New commands to rotate left / right
    - New raster layout mode (displays as many pages as fit in a View)
    - View settings are remembered per-document
  - Manuscript viewer:
    - Toolbar buttons to rotate the pages left / right
    - New toolbar button to show/hide the magnifier
* Bug fixes:
  - fixed #895 seeking in MIDI player during playing stops sound
  - fixed #768, now paper orientation is properly handled in New Score Wizard
  - fixed #705, discrepancy of LilyPond vs. system version of GhostScript
    on Linux (#926)
  - fixed #1094, includepaths on Windows (#1095)